Correcting project javadoc. Implementing Number of Modules measure.